--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "tivoli-cloud",
 	"scripts": {
 		"format": "prettier --write **/*.ts **/*.json **/*.html **/*.scss",
+		"install": "cd server && npm i -D && cd ../frontend && npm i -D",
 		"start:server": "cd server && npm run start",
 		"start:frontend": "cd frontend && npm run start",
 		"build:server": "cd server && npm run build",
