--- a/server/package.json
+++ b/server/package.json
@@ -16,8 +16,12 @@
 		"class-transformer": "^0.2.3",
 		"class-validator": "^0.11.0",
 		"mongoose": "^5.7.7",
+		"node-fetch": "^2.6.0",
 		"openssl-wrapper": "^0.3.4",
 		"passport": "^0.4.0",
+		"passport-discord": "^0.1.3",
+		"passport-github": "^1.1.0",
+		"passport-google-oauth20": "^2.0.0",
 		"passport-jwt": "^4.0.0",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "^6.5.3",
@@ -35,6 +39,7 @@
 		"@types/jest": "^24.0.18",
 		"@types/mongoose": "^5.5.23",
 		"@types/node": "^12.7.5",
+		"@types/node-fetch": "^2.5.3",
 		"@types/passport-jwt": "^3.0.2",
 		"@types/sharp": "^0.23.0",
 		"@types/supertest": "^2.0.8",
