Added WebSocketGateway for WebRTC screensharing

--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,9 @@
 		"@nestjs/mongoose": "^6.1.2",
 		"@nestjs/passport": "^6.1.0",
 		"@nestjs/platform-express": "^6.7.2",
+		"@nestjs/platform-socket.io": "^6.9.0",
 		"@nestjs/swagger": "^3.1.0",
+		"@nestjs/websockets": "^6.9.0",
 		"@ntegral/nestjs-sentry": "^0.1.0",
 		"bcrypt": "^3.0.6",
 		"class-transformer": "^0.2.3",
@@ -42,6 +44,7 @@
 		"@types/node-fetch": "^2.5.3",
 		"@types/passport-jwt": "^3.0.2",
 		"@types/sharp": "^0.23.0",
+		"@types/socket.io": "^2.1.4",
 		"@types/supertest": "^2.0.8",
 		"@types/uuid": "^3.4.6",
 		"jest": "^24.9.0",
