--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,10 +24,14 @@
 		"hammerjs": "^2.0.8",
 		"ng-recaptcha": "^5.0.0",
 		"rxjs": "~6.4.0",
+		"socket.io-client": "^2.3.0",
 		"ts-node": "~7.0.0",
 		"tslib": "^1.10.0",
 		"tslint": "~5.15.0",
 		"typescript": "~3.5.3",
 		"zone.js": "~0.9.1"
+	},
+	"devDependencies": {
+		"@types/socket.io-client": "^1.4.32"
 	}
 }
