--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
 	},
 	"dependencies": {
 		"@angular-devkit/build-angular": "~0.803.12",
+		"@angular-mdc/web": "^3.2.1",
 		"@angular/animations": "~8.2.11",
 		"@angular/cdk": "~8.2.3",
 		"@angular/cli": "~8.3.12",
