--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,8 @@
 		"bcrypt": "^3.0.6",
 		"class-transformer": "^0.2.3",
 		"class-validator": "^0.11.0",
+		"compression": "^1.7.4",
+		"helmet": "^3.21.2",
 		"mongoose": "^5.7.7",
 		"node-fetch": "^2.6.0",
 		"openssl-wrapper": "^0.3.4",
