You can now with apostrephe's among other characters in domains

--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
 		"build:frontend": "cd frontend && npm run build",
 		"build:server": "cd server && npm run build",
 		"dist": "npm run build:frontend && npm run build:server"
+	},
+	"dependencies": {
+		"escape-string-regexp": "^2.0.0"
 	}
 }
