Dockerized the metaverse!

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ server/frontend
 server/dist
 server/ecosystem.config.js
 
-docker/docker-compose.prod.yml
+docker/docker-compose.yml
 docker/db
+docker/app
