--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,6 +4,14 @@ services:
         image: mongo:latest
         restart: always
         volumes:
-            - ./db:/data/db
+            - metaverse-db:/data/db
+    web:
+        image: tivolicloud/metaverse:latest
+        restart: always
         ports:
-            - 27017:27017
+            - 3000:3000/tcp
+        environment:
+            DB_HOST: db
+
+volumes:
+    metaverse-db:
