--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
 	"scripts": {
-		"start": "rimraf dist && cross-env DEV=true nest start --watch",
-		"build": "rimraf dist && nest build"
+		"build": "rimraf dist && nest build",
+		"start": "rimraf dist && cross-env DEV=true nest start --watch"
 	},
 	"dependencies": {
 		"@nestjs/common": "^6.10.7",
@@ -18,6 +18,7 @@
 		"class-transformer": "^0.2.3",
 		"class-validator": "^0.11.0",
 		"compression": "^1.7.4",
+		"escape-string-regexp": "^2.0.0",
 		"helmet": "^3.21.2",
 		"mongo-gridfs": "^1.1.0",
 		"mongoose": "^5.7.13",
