--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,8 @@
 {
 	"scripts": {
 		"start": "ng build --watch",
-		"build": "ng build --prod"
+		"build": "ng build --prod",
+		"build:ssr": "ng build --prod && ng run frontend:server:production --bundleDependencies all"
 	},
 	"dependencies": {
 		"@angular-devkit/build-angular": "~0.803.12",
@@ -18,10 +19,14 @@
 		"@angular/material": "^8.2.3",
 		"@angular/platform-browser": "~8.2.11",
 		"@angular/platform-browser-dynamic": "~8.2.11",
+		"@angular/platform-server": "~8.2.11",
 		"@angular/router": "~8.2.11",
 		"@auth0/angular-jwt": "^3.0.1",
+		"@nguniversal/express-engine": "^8.2.6",
+		"@nguniversal/module-map-ngfactory-loader": "v8.2.6",
 		"@types/node": "~8.9.4",
 		"bootstrap": "^4.3.1",
+		"express": "^4.15.2",
 		"hammerjs": "^2.0.8",
 		"ng-recaptcha": "^5.0.0",
 		"rxjs": "~6.4.0",
@@ -33,6 +38,9 @@
 		"zone.js": "~0.9.1"
 	},
 	"devDependencies": {
-		"@types/socket.io-client": "^1.4.32"
+		"@types/express": "^4.17.0",
+		"@types/socket.io-client": "^1.4.32",
+		"ts-loader": "^5.2.0",
+		"webpack-cli": "^3.1.0"
 	}
 }
