--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
 		"@nestjs/core": "^6.10.7",
 		"@nestjs/jwt": "^6.1.1",
 		"@nestjs/mongoose": "^6.1.2",
+		"@nestjs/ng-universal": "^2.0.1",
 		"@nestjs/passport": "^6.1.1",
 		"@nestjs/platform-express": "^6.10.7",
 		"@nestjs/platform-socket.io": "^6.10.7",
@@ -18,6 +19,7 @@
 		"class-transformer": "^0.2.3",
 		"class-validator": "^0.11.0",
 		"compression": "^1.7.4",
+		"domino": "^2.1.3",
 		"escape-string-regexp": "^2.0.0",
 		"helmet": "^3.21.2",
 		"mongo-gridfs": "^1.1.0",
@@ -34,7 +36,8 @@
 		"sharp": "^0.23.4",
 		"swagger-ui-express": "^4.1.2",
 		"uuid": "^3.3.3",
-		"validator": "^12.1.0"
+		"validator": "^12.1.0",
+		"zone.js": "^0.10.2"
 	},
 	"devDependencies": {
 		"@nestjs/cli": "^6.12.9",
