Started writing some unit tests

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -11,5 +11,5 @@
 		"baseUrl": "./",
 		"incremental": true
 	},
-	"exclude": ["node_modules", "test", "dist", "**/*spec.ts"]
+	"exclude": ["node_modules", "dist"]
 }
