--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,9 @@
 {
 	"scripts": {
-		"build": "rimraf dist && nest build",
-		"start": "rimraf dist && cross-env DEV=true nest start --watch"
+		"build": "npm run test && rimraf dist && nest build",
+		"start": "rimraf dist && cross-env DEV=true nest start --watch",
+		"test": "jest",
+		"test:watch": "jest --watch"
 	},
 	"dependencies": {
 		"@nest-modules/mailer": "^1.1.3",
@@ -44,10 +46,10 @@
 	"devDependencies": {
 		"@nestjs/cli": "^6.12.9",
 		"@nestjs/schematics": "^6.7.5",
-		"@nestjs/testing": "^6.10.7",
+		"@nestjs/testing": "^6.10.12",
 		"@types/bcrypt": "^3.0.0",
 		"@types/express": "^4.17.2",
-		"@types/jest": "^24.0.23",
+		"@types/jest": "^24.0.24",
 		"@types/mongoose": "^5.5.32",
 		"@types/node": "^12.12.14",
 		"@types/node-fetch": "^2.5.4",
@@ -67,5 +69,19 @@
 		"tsconfig-paths": "^3.9.0",
 		"tslint": "^5.20.1",
 		"typescript": "^3.7.3"
+	},
+	"jest": {
+		"moduleFileExtensions": [
+			"js",
+			"json",
+			"ts"
+		],
+		"rootDir": "src",
+		"testRegex": ".spec.ts$",
+		"transform": {
+			"^.+\\.(t|j)s$": "ts-jest"
+		},
+		"coverageDirectory": "../coverage",
+		"testEnvironment": "node"
 	}
 }
