--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
 		"express": "^4.15.2",
 		"hammerjs": "^2.0.8",
 		"ng-recaptcha": "^5.0.0",
+		"ngx-infinite-scroll": "^8.0.1",
 		"rxjs": "~6.4.0",
 		"socket.io-client": "^2.3.0",
 		"ts-node": "~7.0.0",
