--- a/server/package.json
+++ b/server/package.json
@@ -61,6 +61,7 @@
 		"@types/uuid": "^3.4.6",
 		"cross-env": "^6.0.3",
 		"jest": "^24.9.0",
+		"mongodb-memory-server": "^6.1.1",
 		"prettier": "^1.19.1",
 		"rimraf": "^3.0.0",
 		"supertest": "^4.0.2",
