--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
 		"compression": "^1.7.4",
 		"domino": "^2.1.3",
 		"escape-string-regexp": "^2.0.0",
+		"handlebars": "^4.5.3",
 		"helmet": "^3.21.2",
 		"mailchecker": "^3.3.3",
 		"mongo-gridfs": "^1.1.0",
@@ -34,6 +35,7 @@
 		"passport-github": "^1.1.0",
 		"passport-google-oauth20": "^2.0.0",
 		"passport-jwt": "^4.0.0",
+		"puppeteer": "^2.0.0",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "^6.5.3",
 		"sharp": "^0.23.4",
@@ -53,6 +55,7 @@
 		"@types/node": "^12.12.14",
 		"@types/node-fetch": "^2.5.4",
 		"@types/passport-jwt": "^3.0.3",
+		"@types/puppeteer": "^2.0.0",
 		"@types/sharp": "^0.23.1",
 		"@types/socket.io": "^2.1.4",
 		"@types/supertest": "^2.0.8",
