--- a/server/package.json
+++ b/server/package.json
@@ -26,7 +26,7 @@
 		"escape-string-regexp": "^2.0.0",
 		"handlebars": "^4.5.3",
 		"helmet": "^3.21.2",
-		"mailchecker": "git+https://github.com/FGRibreau/mailchecker.git",
+		"mailchecker": "^3.3.3",
 		"mongo-gridfs": "^1.1.0",
 		"mongoose": "^5.7.13",
 		"node-fetch": "^2.6.0",
