--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,43 +2,42 @@
 	"scripts": {
 		"start": "ng build --watch",
 		"build": "ng build --prod",
-		"build:ssr": "ng build --prod && ng run frontend:server:production --bundleDependencies all"
+		"build:ssr": "ng build --prod && ng run frontend:server:production"
 	},
 	"dependencies": {
-		"@angular-devkit/build-angular": "~0.803.12",
+		"@angular-devkit/build-angular": "~0.900.0-rc.9",
 		"@angular-mdc/web": "^3.2.1",
-		"@angular/animations": "~8.2.11",
-		"@angular/cdk": "~8.2.3",
-		"@angular/cli": "~8.3.12",
-		"@angular/common": "~8.2.11",
-		"@angular/compiler": "~8.2.11",
-		"@angular/compiler-cli": "~8.2.11",
-		"@angular/core": "~8.2.11",
-		"@angular/forms": "~8.2.11",
-		"@angular/language-service": "~8.2.11",
-		"@angular/material": "^8.2.3",
-		"@angular/platform-browser": "~8.2.11",
-		"@angular/platform-browser-dynamic": "~8.2.11",
-		"@angular/platform-server": "~8.2.11",
-		"@angular/router": "~8.2.11",
+		"@angular/animations": "~9.0.0-rc.9",
+		"@angular/cdk": "~9.0.0-rc.8",
+		"@angular/cli": "~9.0.0-rc.9",
+		"@angular/common": "~9.0.0-rc.9",
+		"@angular/compiler": "~9.0.0-rc.9",
+		"@angular/compiler-cli": "~9.0.0-rc.9",
+		"@angular/core": "~9.0.0-rc.9",
+		"@angular/forms": "~9.0.0-rc.9",
+		"@angular/language-service": "~9.0.0-rc.9",
+		"@angular/material": "^9.0.0-rc.8",
+		"@angular/platform-browser": "~9.0.0-rc.9",
+		"@angular/platform-browser-dynamic": "~9.0.0-rc.9",
+		"@angular/platform-server": "~9.0.0-rc.9",
+		"@angular/router": "~9.0.0-rc.9",
 		"@auth0/angular-jwt": "^3.0.1",
-		"@nguniversal/express-engine": "^8.2.6",
-		"@nguniversal/module-map-ngfactory-loader": "v8.2.6",
-		"@types/node": "~8.9.4",
+		"@nguniversal/express-engine": "^9.0.0-rc.0",
+		"@types/node": "^12.11.1",
 		"bootstrap": "^4.3.1",
 		"express": "^4.15.2",
-		"hammerjs": "^2.0.8",
 		"ng-recaptcha": "^5.0.0",
 		"ngx-infinite-scroll": "^8.0.1",
-		"rxjs": "~6.4.0",
+		"rxjs": "~6.5.4",
 		"socket.io-client": "^2.3.0",
 		"ts-node": "~7.0.0",
 		"tslib": "^1.10.0",
 		"tslint": "~5.15.0",
-		"typescript": "~3.5.3",
-		"zone.js": "~0.9.1"
+		"typescript": "~3.7.5",
+		"zone.js": "~0.10.2"
 	},
 	"devDependencies": {
+		"@nguniversal/builders": "^9.0.0-rc.0",
 		"@types/express": "^4.17.0",
 		"@types/socket.io-client": "^1.4.32",
 		"ts-loader": "^5.2.0",
