--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
 		"@nestjs/platform-socket.io": "^6.10.7",
 		"@nestjs/swagger": "^4.0.9",
 		"@nestjs/websockets": "^6.10.7",
+		"@ntegral/nestjs-sentry": "^0.1.2",
 		"bcrypt": "^3.0.7",
 		"class-transformer": "^0.2.3",
 		"class-validator": "^0.11.0",
