--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -6,7 +6,7 @@
 		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true,
 		"target": "es2017",
-		"sourceMap": false,
+		"sourceMap": true,
 		"outDir": "./dist",
 		"baseUrl": "./",
 		"incremental": true
