Don't test when build script is run

--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
 	"scripts": {
-		"build": "npm run test && rimraf dist && nest build",
+		"build": "rimraf dist && nest build",
 		"start": "rimraf dist && cross-env DEV=true nest start --watch",
 		"test": "jest",
 		"test:watch": "jest --watch",
