--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,30 @@
 stages:
     - test
+    - deploy
 
-cache:
-    paths:
-        - server/node_modules/
-
-Server tests:
+server tests:
     image: node:latest
     stage: test
+    cache:
+        paths:
+            - server/node_modules/
     script:
         - cd server
         - npm i
         - npm run test:cov
     coverage: /All files[^|]*\|[^|]*\s+([\d\.]+)/
+    artifacts:
+        expire_in: 7 days
+        paths:
+            - server/coverage/
+    
+pages:
+    stage: deploy
+    dependencies:
+        - server tests
+    script:
+        - mv server/coverage/lcov-report public/
+    artifacts:
+        expire_in: 7 days
+        paths:
+            - public
