--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
     db:
         image: mongo:latest
         restart: always
-        volumes:
-            - metaverse-db:/data/db
+        #volumes:
+        #    - ./db:/data/db
     web:
         image: tivolicloud/metaverse:latest
         restart: always
@@ -12,6 +12,3 @@ services:
             - 3000:3000/tcp
         environment:
             DB_HOST: db
-
-volumes:
-    metaverse-db:
