Added latest tag when pushing to our registry

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,7 +61,7 @@ dockerize:
         - docker build -t registry.tivolicloud.com/tivolicloud/metaverse:latest .
 
         - docker login registry.tivolicloud.com -u makitsune -p $GITLAB_TOKEN
-        - docker push registry.tivolicloud.com/tivolicloud/metaverse
+        - docker push registry.tivolicloud.com/tivolicloud/metaverse:latest
 #pages:
 #    stage: deploy
 #    dependencies:
