Added new stage that uses npm ci properly

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,28 @@
 stages:
+    - deps
     - test
     - build
     - deploy
+
+install dependencies:
+    stage: deps
+    image: node:latest
+
+    cache:
+        paths:
+            - server/node_modules/
+            - frontend/node_modules/
+
+    script:
+        - cd server
+        - npm ci
+        - cd ../frontend
+        - npm ci
+
+    only:
+        changes:
+            - server/package-lock.json
+            - frontend/package-lock.json
 
 server tests:
     stage: test
@@ -13,7 +34,6 @@ server tests:
 
     script:
         - cd server
-        - npm ci
         - npm run test:cov
 
     coverage: /All files[^|]*\|[^|]*\s+([\d\.]+)/
@@ -38,7 +58,6 @@ build server:
         - mkdir -p app app/server
 
         - cd server
-        - npm ci
         - npm run build
 
         - cp -r dist ../app/server
@@ -63,7 +82,6 @@ build frontend:
         - mkdir -p app app/frontend
 
         - cd frontend
-        - npm ci
         - npm run build:ssr
 
         - cp -r dist ../app/frontend
