Angular doesn't like npm ci?

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ install dependencies:
         - npm ci
 
         - cd ../frontend
-        - npm ci
+        - npm i
 
     # only:
     #     changes:
@@ -83,8 +83,6 @@ build frontend:
             - frontend/node_modules/
 
     script:
-        - npm i @angular/cli -g # weird bug
-
         - mkdir -p app app/frontend
 
         - cd frontend
