Removed bloat from package.json

--- a/package.json
+++ b/package.json
@@ -1,12 +1,6 @@
 {
 	"name": "tivoli-cloud",
 	"scripts": {
-		"format": "prettier --write **/*.ts **/*.json **/*.html **/*.scss",
-		"install": "cd server && npm i && cd ../frontend && npm i",
-		"start:frontend": "cd frontend && npm run start",
-		"start:server": "cd server && npm run start",
-		"build:frontend": "cd frontend && npm run build",
-		"build:server": "cd server && npm run build",
-		"dist": "npm run build:frontend && npm run build:server"
+		"format": "prettier --write **/*.ts **/*.json **/*.html **/*.scss"
 	}
 }
