Only deploy docker image manually

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -106,9 +106,11 @@ build frontend:
         paths:
             - app/frontend
 
-dockerize:
+deploy docker image:
     stage: deploy
     image: docker:latest
+
+    when: manual
 
     dependencies:
         - build server
