Updated to Angular 9 from rc

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,43 +5,43 @@
 		"build:ssr": "ng build --prod && ng run frontend:server:production"
 	},
 	"dependencies": {
-		"@angular-devkit/build-angular": "~0.900.0-rc.9",
+		"@angular-devkit/build-angular": "~0.900.0",
 		"@angular-mdc/web": "^3.2.1",
-		"@angular/animations": "~9.0.0-rc.9",
-		"@angular/cdk": "~9.0.0-rc.8",
-		"@angular/cli": "~9.0.0-rc.9",
-		"@angular/common": "~9.0.0-rc.9",
-		"@angular/compiler": "~9.0.0-rc.9",
-		"@angular/compiler-cli": "~9.0.0-rc.9",
-		"@angular/core": "~9.0.0-rc.9",
-		"@angular/forms": "~9.0.0-rc.9",
-		"@angular/language-service": "~9.0.0-rc.9",
-		"@angular/material": "^9.0.0-rc.8",
-		"@angular/platform-browser": "~9.0.0-rc.9",
-		"@angular/platform-browser-dynamic": "~9.0.0-rc.9",
-		"@angular/platform-server": "~9.0.0-rc.9",
-		"@angular/router": "~9.0.0-rc.9",
+		"@angular/animations": "~9.0.0",
+		"@angular/cdk": "~9.0.0",
+		"@angular/cli": "~9.0.1",
+		"@angular/common": "~9.0.0",
+		"@angular/compiler": "~9.0.0",
+		"@angular/compiler-cli": "~9.0.0",
+		"@angular/core": "~9.0.0",
+		"@angular/forms": "~9.0.0",
+		"@angular/language-service": "~9.0.0",
+		"@angular/material": "^9.0.0",
+		"@angular/platform-browser": "~9.0.0",
+		"@angular/platform-browser-dynamic": "~9.0.0",
+		"@angular/platform-server": "~9.0.0",
+		"@angular/router": "~9.0.0",
 		"@auth0/angular-jwt": "^3.0.1",
-		"@nguniversal/express-engine": "^9.0.0-rc.0",
+		"@nguniversal/express-engine": "^9.0.0",
 		"@sentry/browser": "^5.11.1",
-		"@types/node": "^12.11.1",
+		"@types/node": "^13.7.0",
 		"bootstrap": "^4.3.1",
 		"express": "^4.15.2",
 		"ng-recaptcha": "^5.0.0",
 		"ngx-infinite-scroll": "^8.0.1",
 		"rxjs": "~6.5.4",
 		"socket.io-client": "^2.3.0",
-		"ts-node": "~7.0.0",
+		"ts-node": "~8.6.2",
 		"tslib": "^1.10.0",
-		"tslint": "~5.15.0",
+		"tslint": "~6.0.0",
 		"typescript": "~3.7.5",
 		"zone.js": "~0.10.2"
 	},
 	"devDependencies": {
-		"@nguniversal/builders": "^9.0.0-rc.0",
+		"@nguniversal/builders": "^9.0.0",
 		"@types/express": "^4.17.0",
 		"@types/socket.io-client": "^1.4.32",
-		"ts-loader": "^5.2.0",
+		"ts-loader": "^6.2.1",
 		"webpack-cli": "^3.1.0"
 	}
 }
