--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,8 @@ server deps:
 
     cache:
         paths:
-            - server/node_modules/
+            - server/node_modules
+            - server/.yarn
 
     script:
         - cd server
@@ -26,7 +27,8 @@ frontend deps:
 
     cache:
         paths:
-            - frontend/node_modules/
+            - frontend/node_modules
+            - frontend/.yarn
 
     script:
         - cd frontend
@@ -43,7 +45,8 @@ server tests:
     cache:
         policy: pull
         paths:
-            - server/node_modules/
+            - server/node_modules
+            - server/.yarn
 
     script:
         - cd server
@@ -68,7 +71,8 @@ build server:
     cache:
         policy: pull
         paths:
-            - server/node_modules/
+            - server/node_modules
+            - server/.yarn
 
     script:
         - mkdir -p app app/server
@@ -93,7 +97,8 @@ build frontend:
     cache:
         policy: pull
         paths:
-            - frontend/node_modules/
+            - frontend/node_modules
+            - frontend/.yarn
 
     script:
         - mkdir -p app app/frontend
