--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
 		"start": "rimraf dist && cross-env DEV=true nest start --watch",
 		"test": "jest",
 		"test:watch": "jest --watch",
-		"test:cov": "jest --coverage"
+		"test:cov": "jest --coverage",
+		"build:swc": "rimraf dist-swc && swc src -d dist-swc"
 	},
 	"dependencies": {
 		"@nest-modules/mailer": "^1.1.3",
@@ -48,6 +49,8 @@
 		"@nestjs/cli": "^6.12.9",
 		"@nestjs/schematics": "^6.7.5",
 		"@nestjs/testing": "^6.10.12",
+		"@swc/cli": "^0.1.23",
+		"@swc/core": "^1.1.25",
 		"@types/bcrypt": "^3.0.0",
 		"@types/express": "^4.17.2",
 		"@types/jest": "^24.0.24",
