--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
 		"build:swc": "rimraf dist-swc && swc src -d dist-swc"
 	},
 	"dependencies": {
+		"@godaddy/terminus": "^4.3.1",
 		"@nest-modules/mailer": "^1.1.3",
 		"@nestjs/common": "^6.10.7",
 		"@nestjs/core": "^6.10.7",
@@ -18,6 +19,7 @@
 		"@nestjs/platform-express": "^6.10.7",
 		"@nestjs/platform-socket.io": "^6.10.7",
 		"@nestjs/swagger": "^4.0.9",
+		"@nestjs/terminus": "^6.5.6",
 		"@nestjs/websockets": "^6.10.7",
 		"@ntegral/nestjs-sentry": "^0.1.2",
 		"bcrypt": "^3.0.7",
