--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
 		"@nestjs/terminus": "^6.5.6",
 		"@nestjs/websockets": "^6.11.8",
 		"@ntegral/nestjs-sentry": "^0.1.2",
+		"aws-sdk": "^2.626.0",
 		"bcrypt": "^3.0.8",
 		"class-transformer": "^0.2.3",
 		"class-validator": "^0.11.0",
