--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -128,10 +128,9 @@ deploy docker image:
         - docker:dind
 
     script:
-        - docker build -t registry.tivolicloud.com/tivolicloud-private/metaverse:latest .
-
-        - docker login registry.tivolicloud.com -u makitsune -p $GITLAB_TOKEN
-        - docker push registry.tivolicloud.com/tivolicloud-private/metaverse:latest
+        - docker build -t $CI_REGISTRY/tivolicloud-private/metaverse:latest .
+        - docker login $CI_REGISTRY -u gitlab-ci-token -p $CI_JOB_TOKEN
+        - docker push $CI_REGISTRY/tivolicloud-private/metaverse:latest
 #pages:
 #    stage: deploy
 #    dependencies:
