--- a/server/package.json
+++ b/server/package.json
@@ -28,9 +28,11 @@
 		"class-validator": "^0.11.0",
 		"compression": "^1.7.4",
 		"escape-string-regexp": "^2.0.0",
+		"ftp-srv": "^4.3.1",
 		"handlebars": "^4.7.3",
 		"helmet": "^3.21.2",
 		"mailchecker": "^3.3.4",
+		"mime-types": "^2.1.26",
 		"mongo-gridfs": "^1.1.0",
 		"mongoose": "^5.9.2",
 		"node-fetch": "^2.6.0",
