--- a/server/package.json
+++ b/server/package.json
@@ -44,6 +44,7 @@
 		"puppeteer": "^2.1.1",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "^6.5.4",
+		"rxjs-stream": "^3.1.1",
 		"sharp": "^0.24.1",
 		"swagger-ui-express": "^4.1.3",
 		"uuid": "^3.4.0",
