--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,13 @@
 		"build:swc": "rimraf dist-swc && swc src -d dist-swc"
 	},
 	"dependencies": {
+		"@babel/core": "^7.8.6",
+		"@babel/plugin-proposal-class-properties": "^7.8.3",
+		"@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
+		"@babel/plugin-proposal-optional-chaining": "^7.8.3",
+		"@babel/plugin-proposal-pipeline-operator": "^7.8.3",
+		"@babel/preset-env": "^7.8.6",
+		"@babel/preset-typescript": "^7.8.3",
 		"@godaddy/terminus": "^4.3.1",
 		"@nest-modules/mailer": "^1.1.3",
 		"@nestjs/common": "^6.11.8",
@@ -22,7 +29,6 @@
 		"@nestjs/terminus": "^6.5.6",
 		"@nestjs/websockets": "^6.11.8",
 		"@ntegral/nestjs-sentry": "^0.1.2",
-		"@swc/core": "^1.1.31",
 		"aws-sdk": "^2.626.0",
 		"bcrypt": "^3.0.8",
 		"class-transformer": "^0.2.3",
