--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
 		"@babel/preset-env": "^7.8.6",
 		"@babel/preset-typescript": "^7.8.3",
 		"@godaddy/terminus": "^4.3.1",
+		"@google-cloud/storage": "^4.5.0",
 		"@nest-modules/mailer": "^1.1.3",
 		"@nestjs/common": "^6.11.8",
 		"@nestjs/core": "^6.11.8",
@@ -29,7 +30,6 @@
 		"@nestjs/terminus": "^6.5.6",
 		"@nestjs/websockets": "^6.11.8",
 		"@ntegral/nestjs-sentry": "^0.1.2",
-		"aws-sdk": "^2.635.0",
 		"bcrypt": "^3.0.8",
 		"class-transformer": "^0.2.3",
 		"class-validator": "^0.11.0",
