--- a/server/package.json
+++ b/server/package.json
@@ -56,6 +56,7 @@
 		"swagger-ui-express": "^4.1.3",
 		"uuid": "^3.4.0",
 		"validator": "^12.2.0",
+		"webdav-server": "^2.6.2",
 		"yaml": "^1.7.2",
 		"zone.js": "^0.10.2"
 	},
