Revert "Removed depencencies step which should make frontend build faster"
This reverts commit a91681d852ece20785c05729b30d8bc0afd54f2a.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,47 @@
 stages:
+    - dependencies
     - test
     - build
     - deploy
+
+server deps:
+    stage: dependencies
+    image: node:lts
+
+    cache:
+        paths:
+            - server/node_modules/
+
+    script:
+        - cd server
+        - yarn install
+
+    only:
+        changes:
+            - server/yarn.lock
+
+frontend deps:
+    stage: dependencies
+    image: node:lts
+
+    cache:
+        paths:
+            - frontend/node_modules/
+
+    script:
+        - cd frontend
+        - yarn install
+
+    only:
+        changes:
+            - frontend/yarn.lock
 
 server tests:
     stage: test
     image: node:lts
 
     cache:
+        policy: pull
         paths:
             - server/node_modules/
 
@@ -33,6 +67,7 @@ build server:
         - server tests
 
     cache:
+        policy: pull
         paths:
             - server/node_modules/
 
@@ -58,6 +93,7 @@ build frontend:
     image: node:lts
 
     cache:
+        policy: pull
         paths:
             - frontend/node_modules/
 
