--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
 		"bootstrap": "^4.3.1",
 		"express": "^4.15.2",
 		"ng-recaptcha": "^5.0.0",
+		"ngx-cookie-service": "^3.0.3",
 		"ngx-infinite-scroll": "^8.0.1",
 		"rxjs": "~6.5.4",
 		"socket.io-client": "^2.3.0",
