--- a/server/package.json
+++ b/server/package.json
@@ -31,10 +31,12 @@
 		"@nestjs/websockets": "^6.11.8",
 		"@ntegral/nestjs-sentry": "^0.1.2",
 		"bcrypt": "^3.0.8",
+		"body-parser": "^1.19.0",
 		"class-transformer": "^0.2.3",
 		"class-validator": "^0.11.0",
 		"compression": "^1.7.4",
 		"escape-string-regexp": "^2.0.0",
+		"express": "^4.17.1",
 		"ftp-srv": "^4.3.1",
 		"handlebars": "^4.7.3",
 		"helmet": "^3.21.2",
